nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: bcs-nodeport
  namespace: bcs
spec:
  type: NodePort
  selector: 
    app: bcs-deployment
  ports: 
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
