ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bcs-ingress
  namespace: bcs
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "bcs-letsencrypt"
    kubernetes.io/rewrite-target: "/"
    kubernetes.io/ssl-redirect: "false"
spec:
spec:
  tls:
  - hosts:
    - 84.201.151.58.nip.io
    secretName: echo-tls
  rules:
  - http:
      paths:
      - path: "/api"
        backend:
          serviceName: bcs-back-nodeport
          servicePort: 80
      - path: "/"
        backend:
          serviceName: bcs-front-nodeport
          servicePort: 80
