k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bck
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  tls:
  - hosts:
    - "yet-another.website"
    secretName: tls-secret
  rules:
  - host: "yet-another.website"
    http:
      paths:
      - path: /
        backend:
          serviceName: app
          servicePort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bck-deployment
  namespace: bck
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bck-app
  template:
    metadata:
      namespace: bck
      labels:
        app: bck-app
    spec:
      containers:
        - name: bck
          image: cr.yandex/crp50ntveojf77o60dde/bcs:__VERSION__
          imagePullPolicy: Always
          ports:
          - containerPort: 5001
            protocol: TCP
